--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
@@ -1,32 +1,44 @@
 <div class="sport-players-tab">
-  <div class="sport-players-tab__search-container">
-    <tui-textfield iconStart="@tui.search">
-      <label tuiLabel>Search players</label>
-      <input
-        placeholder="Search by name..."
-        tuiTextfield
-        [value]="playersSearch()"
-        (input)="onPlayersSearchChange($any($event.target).value)" />
-    </tui-textfield>
-    @if (playersSearch()) {
-      <button
-        type="button"
+  <div class="sport-players-tab__header-with-actions">
+    <div class="sport-players-tab__search-container">
+      <tui-textfield iconStart="@tui.search">
+        <label tuiLabel>Search players</label>
+        <input
+          placeholder="Search by name..."
+          tuiTextfield
+          [value]="playersSearch()"
+          (input)="onPlayersSearchChange($any($event.target).value)" />
+      </tui-textfield>
+      @if (playersSearch()) {
+        <button
+          type="button"
+          tuiButton
+          appearance="flat"
+          iconStart="@tui.close"
+          size="s"
+          (click)="clearPlayersSearch()"
+          class="sport-players-tab__search-clear">
+        </button>
+      }
+    </div>
+    <button
+      type="button"
+      tuiButton
       appearance="flat"
-      iconStart="@tui.close"
-      size="s"
-      (click)="clearPlayersSearch()"
-      class="sport-players-tab__search-clear">
+      iconStart="@tui.plus"
+      (click)="navigateToAddPlayer()"
+      class="sport-players-tab__add-button">
+      Add Player
     </button>
-    }
   </div>
 
   <div class="sport-players-tab__sort-controls">
     <button
       type="button"
+      tuiButton
       appearance="flat"
       size="s"
       class="sort-button"
-      appearance="flat"
       iconEnd="playersSortOrder() === 'asc' ? '@tui.chevron-up' : '@tui.chevron-down'"
       (click)="togglePlayersSort()">
       Sort by Name
@@ -71,6 +83,7 @@
           @for (option of itemsPerPageOptions; track option) {
             <button
               type="button"
+              tuiButton
               class="sport-players-tab__items-option"
               [class.sport-players-tab__items-option--active]="playersItemsPerPage() === option"
               (click)="onPlayersItemsPerPageChange(option)">
