--- a/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-teams-tab.component.html
@@ -38,11 +38,11 @@
     <div class="sport-teams-tab__loading">Loading teams...</div>
   } @else if (teamsError()) {
     <div class="sport-teams-tab__error">{{ teamsError() }}</div>
-  } @else if (paginatedTeams().length === 0) {
+  } @else if (teams().length === 0) {
     <p class="sport-teams-tab__empty-message">No teams found for this sport</p>
   } @else {
     <div class="sport-teams-tab__team-list">
-      @for (team of paginatedTeams(); track team.id) {
+      @for (team of teams(); track team.id) {
         <button
           class="sport-teams-tab__team-card"
           tuiCardLarge
@@ -70,30 +70,30 @@
       }
     </div>
 
-      @if (apiTotalPages > 1) {
-        <div class="sport-teams-tab__pagination-wrapper">
-          <div class="sport-teams-tab__items-per-page">
-            <span>Items per page:</span>
-            @for (option of itemsPerPageOptions; track option) {
-              <button
-                type="button"
-                tuiButton
-                class="sport-teams-tab__items-option"
-                [class.sport-teams-tab__items-option--active]="teamsItemsPerPage() === option"
-                (click)="onTeamsItemsPerPageChange(option)"
-              >
-                {{ option }}
-              </button>
-            }
-          </div>
-          <div class="sport-teams-tab__pagination">
-            <tui-pagination
-              [length]="apiTotalPages"
-              [index]="teamsCurrentPage() - 1"
-              (indexChange)="onTeamsPageChange($event)"
-            />
-          </div>
+    @if (apiTotalPages > 1) {
+      <div class="sport-teams-tab__pagination-wrapper">
+        <div class="sport-teams-tab__items-per-page">
+          <span>Items per page:</span>
+          @for (option of itemsPerPageOptions; track option) {
+            <button
+              type="button"
+              tuiButton
+              class="sport-teams-tab__items-option"
+              [class.sport-teams-tab__items-option--active]="teamsItemsPerPage() === option"
+              (click)="onTeamsItemsPerPageChange(option)"
+            >
+              {{ option }}
+            </button>
+          }
         </div>
-      }
+        <div class="sport-teams-tab__pagination">
+          <tui-pagination
+            [length]="apiTotalPages"
+            [index]="teamsCurrentPage() - 1"
+            (indexChange)="onTeamsPageChange($event)"
+          />
+        </div>
+      </div>
+    }
   }
 </div>
