refactor(forms): update forms to use new model fields from backend schema
Add support for new fields added in previous model alignment:
- Person forms: person_eesl_id and person_dob
- Tournament forms: tournament_eesl_id, logo upload, main_sponsor_id, sponsor_line_id
- Add uploadTournamentLogo() method to TournamentStoreService
- Fix PersonUpdate type to remove null from person_eesl_id

Changes:
- PersonCreate: Add person_eesl_id (number) and person_dob (date) form fields
- PersonEdit: Add same fields with proper reactive form patching
- TournamentCreate: Add new fields and logo upload functionality
- TournamentEdit: Add new fields with computed logo URL management
- Update templates with new form inputs and file upload controls

--- a/src/app/features/persons/components/create/person-create.component.html
+++ b/src/app/features/persons/components/create/person-create.component.html
@@ -33,6 +33,26 @@
     </div>
 
     <div class="person-create__field">
+      <label for="person_eesl_id" class="person-create__label">EESL ID</label>
+      <input
+        id="person_eesl_id"
+        type="number"
+        formControlName="person_eesl_id"
+        class="person-create__input"
+      />
+    </div>
+
+    <div class="person-create__field">
+      <label for="person_dob" class="person-create__label">Date of Birth</label>
+      <input
+        id="person_dob"
+        type="date"
+        formControlName="person_dob"
+        class="person-create__input"
+      />
+    </div>
+
+    <div class="person-create__field">
       <label for="person_photo" class="person-create__label">Photo</label>
       <input
         id="person_photo"
