fix(shared): fix EntityHeader navigateBack callback context loss

--- a/src/app/features/persons/components/detail/person-detail.component.html
+++ b/src/app/features/persons/components/detail/person-detail.component.html
@@ -4,7 +4,7 @@
   } @else if (person()) {
     <app-entity-header
       [title]="personName()"
-      [navigateBack]="navigateBack"
+      [navigateBack]="navigateBack.bind(this)"
       (edit)="navigateToEdit()"
       (delete)="deletePerson()"
     />
