--- a/src/app/features/tournaments/components/detail/tournament-detail.component.html
+++ b/src/app/features/tournaments/components/detail/tournament-detail.component.html
@@ -2,7 +2,7 @@
   <div class="tournament-detail">
     <app-entity-header
       [title]="t.title"
-      [navigateBack]="navigateBack"
+      [navigateBack]="navigateBack.bind(this)"
       (edit)="navigateToEdit()"
       (delete)="deleteTournament()"
     />
