refactor(shared): change EntityHeader navigateBack from callback input to output

--- a/src/app/features/persons/components/detail/person-detail.component.html
+++ b/src/app/features/persons/components/detail/person-detail.component.html
@@ -4,7 +4,7 @@
   } @else if (person()) {
     <app-entity-header
       [title]="personName()"
-      [navigateBack]="navigateBack.bind(this)"
+      (navigateBack)="navigateBack()"
       (edit)="navigateToEdit()"
       (delete)="deletePerson()"
     />
