--- a/src/app/features/teams/components/detail/team-detail.component.html
+++ b/src/app/features/teams/components/detail/team-detail.component.html
@@ -2,7 +2,7 @@
   @if (team(); as team) {
     <app-entity-header
       [title]="team.title"
-      [navigateBack]="navigateToSportDetail.bind(this)"
+      (navigateBack)="navigateToSportDetail()"
       (edit)="navigateToEdit()"
       (delete)="deleteTeam()"
     />
